started reusing added ingredient component to use with directions as well

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -125,7 +125,7 @@
 							</div>
 						</div>
 					</section>
-					<app-added-ingredients [addedIngredients]="addedIngredients" [selectedIngredientsCategory]="selectedIngredientsCategory" [units]="units" (ingredientRemovedEvent)="ingredientRemoved($event)"></app-added-ingredients>
+					<app-added-ingredients [addedObjects]="addedIngredients" [selectedObjectsCategory]="selectedIngredientsCategory" [units]="units" (objectRemovedEvent)="ingredientRemoved($event)"></app-added-ingredients>
             	</div>
             </section>
     		<!-- Directions -->
