added support for adding directions added support for adding directions categories

--- a/src/app/add-recipe/add-recipe.component.scss
+++ b/src/app/add-recipe/add-recipe.component.scss
@@ -27,7 +27,7 @@
 
 #imagesUploadInput + label .fa-upload { margin-left: .625rem; }
 
-.new-ingredient-category select { width: 30%; margin-right: 1rem; }
+.new-category select { width: 30%; margin-right: 1rem; }
 
 // CSS Tabs ====================================================================== 
 
