--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -110,7 +110,7 @@
 	            			<button type="button" class="btn btn-outline-primary" [attr.disabled]="ingredientText ? null : true" (click)="addPastedIngredients()">הוסף מצרכים</button>
 	            		</div>
 					</section>
-					<section class="new-ingredient-category">
+					<section class="new-category">
 						<div *ngIf="objectKeys(addedIngredients).length > 1" class="form-group">
 							<label>הוסף לקטגוריה</label>
 							<select class="form-control inline-block" (change)="ingredientsCategoryChanged($event.target.value)">
@@ -141,11 +141,11 @@
 					<section id="directions-content1" class="tab-content">
 		        		<div class="form-group">
 			                <label>שלב</label>
-			                <input type="text" class="form-control" placeholder="הוסף שלב">
+			                <input #directionInput [(ngModel)]="direction" name="direction" type="text" class="form-control" placeholder="הוסף שלב">
 			                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
 			            </div>
 			           	<div class="align-center">
-							<button type="button" class="btn btn-outline-primary">הוסף שלב</button>			           		
+							<button type="button" class="btn btn-outline-primary" [attr.disabled]="direction ? null : true" (click)="addDirection()">הוסף שלב</button>			           		
 			           	</div>
 					</section>
 
@@ -153,11 +153,26 @@
 						<!-- add explanation -->
 						<div class="form-group">
 							<label>הדבק שלבים</label>
-	            			<textarea class="form-control" rows="4" placeholder="הדבק שלבים, כל שלב בשורה חדשה."></textarea>
+	            			<textarea class="form-control" #directionsTextInput [(ngModel)]="directionsText" name="directionsText" rows="4" placeholder="הדבק שלבים, כל שלב בשורה חדשה."></textarea>
 	            		</div>
             			<div class="align-center">
-	            			<button type="button" class="btn btn-outline-primary">הוסף שלבים</button>
+	            			<button type="button" class="btn btn-outline-primary" [attr.disabled]="directionsText ? null : true" (click)="addPastedDirections()">הוסף שלבים</button>
 	            		</div>
+					</section>
+					<section class="new-category">
+						<div *ngIf="objectKeys(addedDirections).length > 1" class="form-group">
+							<label>הוסף לקטגוריה</label>
+							<select class="form-control inline-block" (change)="directionsCategoryChanged($event.target.value)">
+								<option *ngFor="let categoryName of objectKeys(addedDirections)" [attr.selected]="categoryName == selectedDirectionsCategory ? true : null">{{ categoryName }}</option>
+							</select>
+						</div>
+						<div class="form-group">
+							<label>הוסף קטגוריה חדשה</label>
+							<div class="flex-input-button-container">
+								<input #newDirectionsCategoryInput [(ngModel)]="newDirectionsCategory" name="newDirectionsCategory" type="text" class="form-control" placeholder="לדוג' רוטב, ציפוי וכו'">
+								<button type="button" class="btn btn-outline-primary" [attr.disabled]="newDirectionsCategory ? null : true" (click)="addDirectionCategory(newDirectionsCategoryInput.value)">הוסף קטגוריה</button>
+							</div>
+						</div>
 					</section>
 					<app-added-properties [addedObjects]="addedDirections" [selectedObjectsCategory]="selectedDirectionsCategory" [objectType]="'direction'" (objectRemovedEvent)="directionRemoved($event)"></app-added-properties>
             	</div>
