--- a/src/app/add-recipe/add-recipe.component.scss
+++ b/src/app/add-recipe/add-recipe.component.scss
@@ -27,6 +27,12 @@
 
 #imagesUploadInput + label .fa-upload { margin-left: .625rem; }
 
+.new-category {
+	padding: 1.25rem 0 0.25rem 0;
+    margin: 1.25rem 0;
+    border-top: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+}
 .new-category select { width: 30%; margin-right: 1rem; }
 
 // CSS Tabs ====================================================================== 
