--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -9,7 +9,7 @@
         	<section class="add-recipe-section">
         		<div class="form-group">
 	                <label for="recipe-title">כותרת</label>
-	                <input type="text" class="form-control" id="recipeTitle" placeholder="הכנס כותרת" required>
+	                <input type="text" [(ngModel)]="recipe.title" class="form-control" id="recipeTitle" name="recipeTitle" placeholder="הכנס כותרת" required>
 	                <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
 	            </div>
 	            <fieldset class="form-group">
@@ -115,10 +115,10 @@
 	            		</div>
 					</section>
 					<section class="new-category">
-						<div *ngIf="objectKeys(recipeData.ingredients).length > 1" class="form-group">
+						<div *ngIf="objectKeys(recipe.ingredients).length > 1" class="form-group">
 							<label>הוסף לקטגוריה</label>
 							<select class="form-control inline-block" (change)="ingredientsCategoryChanged($event.target.value)">
-								<option *ngFor="let categoryName of objectKeys(recipeData.ingredients)" [attr.selected]="categoryName == selectedIngredientsCategory ? true : null">{{ categoryName }}</option>
+								<option *ngFor="let categoryName of objectKeys(recipe.ingredients)" [attr.selected]="categoryName == selectedIngredientsCategory ? true : null">{{ categoryName }}</option>
 							</select>
 						</div>
 						<div class="form-group">
@@ -129,7 +129,7 @@
 							</div>
 						</div>
 					</section>
-					<app-added-properties [addedObjects]="recipeData.ingredients" [selectedObjectsCategory]="selectedIngredientsCategory" [objectType]="'ingredient'" [units]="units" (objectRemovedEvent)="ingredientRemoved($event)"></app-added-properties>
+					<app-added-properties [addedObjects]="recipe.ingredients" [selectedObjectsCategory]="selectedIngredientsCategory" [objectType]="'ingredient'" [units]="units" (objectRemovedEvent)="ingredientRemoved($event)"></app-added-properties>
             	</div>
             </section>
     		<!-- Directions -->
@@ -164,10 +164,10 @@
 	            		</div>
 					</section>
 					<section class="new-category">
-						<div *ngIf="objectKeys(recipeData.directions).length > 1" class="form-group">
+						<div *ngIf="objectKeys(recipe.directions).length > 1" class="form-group">
 							<label>הוסף לקטגוריה</label>
 							<select class="form-control inline-block" (change)="directionsCategoryChanged($event.target.value)">
-								<option *ngFor="let categoryName of objectKeys(recipeData.directions)" [attr.selected]="categoryName == selectedDirectionsCategory ? true : null">{{ categoryName }}</option>
+								<option *ngFor="let categoryName of objectKeys(recipe.directions)" [attr.selected]="categoryName == selectedDirectionsCategory ? true : null">{{ categoryName }}</option>
 							</select>
 						</div>
 						<div class="form-group">
@@ -178,7 +178,7 @@
 							</div>
 						</div>
 					</section>
-					<app-added-properties [addedObjects]="recipeData.directions" [selectedObjectsCategory]="selectedDirectionsCategory" [objectType]="'direction'" (objectRemovedEvent)="directionRemoved($event)"></app-added-properties>
+					<app-added-properties [addedObjects]="recipe.directions" [selectedObjectsCategory]="selectedDirectionsCategory" [objectType]="'direction'" (objectRemovedEvent)="directionRemoved($event)"></app-added-properties>
             	</div>
             </section>
             <section class="add-recipe-section">
