--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -4,8 +4,8 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/grid";
-@import "~bootstrap/scss/navbar";
-@import "~bootstrap/scss/forms";
+// @import "~bootstrap/scss/navbar";
+// @import "~bootstrap/scss/forms";
 
 // import project sass ====================================================================== 
 @import 'variables';
