--- a/src/app/add-recipe/add-recipe.component.scss
+++ b/src/app/add-recipe/add-recipe.component.scss
@@ -39,7 +39,7 @@ form {
     border-top: 1px solid $border-color;
     border-bottom: 1px solid $border-color;
 }
-.new-category select { width: 30%; margin-right: 1rem; }
+.new-category .select { display: inline-block; width: 30%; margin-right: 1rem; }
 
 // CSS Tabs ====================================================================== 
 
