--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -216,9 +216,10 @@
 				</div>
 				<div class="form-group">
 					<label>סוג מטבח</label>
-				    <select multiple="" class="form-control">
-				        <option *ngFor="let cuisine of cuisines">{{ cuisine }}</option>
+				    <select multiple="" class="form-control" [(ngModel)]="recipe.cuisines" name="cuisines">
+				        <option *ngFor="let cuisine of cuisines" value="{{ cuisine.id }}">{{ cuisine.name }}</option>
 				    </select>
+				    <small class="form-text text-muted">בחר סוגי מטבחים הקשורים למתכון</small>
 				</div>
 				<div class="form-group">
 					<label>מצרכים עיקריים</label>
