--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -222,10 +222,12 @@
 				    <small class="form-text text-muted">בחר סוגי מטבחים הקשורים למתכון</small>
 				</div>
 				<div class="form-group">
+					<!-- TODO: auto select based on ingredients that were already added -->
 					<label>מצרכים עיקריים</label>
-				    <select multiple="" class="form-control">
-				        <option *ngFor="let ingredient of mainIngredients">{{ ingredient }}</option>
+				    <select multiple="" class="form-control" [(ngModel)]="recipe.mainIngredients" name="mainIngredients">
+				        <option *ngFor="let ingredient of mainIngredients"value="{{ ingredient.id }}">{{ ingredient.name }}</option>
 				    </select>
+				    <small class="form-text text-muted">בחר מצרכים עיקריים הנמצאים במתכון</small>
             	</div>
 				<div class="form-group">
 					<label>דרכי הכנה</label>
