--- a/src/app/select-units/select-units.component.html
+++ b/src/app/select-units/select-units.component.html
@@ -2,7 +2,7 @@
 <div class="select">
 	<select [(ngModel)]="selectedUnit" #ingredientUnit class="form-control" [class.added-ingredient-select]="addedIngredient" name="selectUnit" (change)="unitSelectChanged($event.target.value)">
 		<option [attr.selected]="!addedIngredient ? true : null" disabled hidden [value]="undefined">בחר</option>
-	    <option *ngFor="let unit of units" value="{{ unit.id }}" [attr.selected]="addedIngredient && addedIngredient.unit == unit.id ? true : null">{{ unit.name }}</option>
+	    <option *ngFor="let unit of units" value="{{ unit._id }}" [attr.selected]="addedIngredient && addedIngredient.unit == unit._id ? true : null">{{ unit.name }}</option>
 	</select>
 	<i class="fas fa-angle-down"></i>
 </div>
