--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -237,7 +237,7 @@
 				    <small class="form-text text-muted">בחר שיטות בישול במתכון</small>
             	</div>
             	<div class="form-group align-center">
-	                <input type="file" id="imagesUploadInput" class="form-control-file inputfile" name="recipe-images" aria-describedby="fileHelp" multiple  accept=".jpg,.jpeg,.png,.hief,.hiec">
+	                <input type="file" id="imagesUploadInput" (change)="updateUploadedFiles($event)" class="form-control-file inputfile" name="recipe-images" aria-describedby="fileHelp" multiple  accept=".jpg,.jpeg,.png,.hief,.hiec">
 	                <label for="imagesUploadInput"><i class="fas fa-upload"></i>הוספת תמונות</label>
 	                <!-- <small id="fileHelp" class="form-text text-muted">הוסף תמונות של המתכון</small> -->
 	            </div>
