added support for displaying alerts added alerts service, component and model

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,6 +4,9 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 
+// Colors
 $red:	#EB6864;
-
 $border-color: #DEDEDE;
+
+// Positions
+$top-z-index: 1030;
