added ng-select to support multi select auto select main ingredients based on ingredients that were already added

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -222,11 +222,19 @@
 				    <small class="form-text text-muted">בחר סוגי מטבחים הקשורים למתכון</small>
 				</div>
 				<div class="form-group">
-					<!-- TODO: auto select based on ingredients that were already added -->
 					<label>מצרכים עיקריים</label>
-				    <select multiple="" class="form-control" [(ngModel)]="recipe.mainIngredients" name="mainIngredients">
-				        <option *ngFor="let ingredient of mainIngredients" value="{{ ingredient._id }}">{{ ingredient.title }}</option>
-				    </select>
+				    <ng-select
+						#mainIngredientsSelect
+				        [items]="mainIngredients"
+				        [multiple]="true"
+				        [closeOnSelect]="false"
+				        name="mainIngredients"
+				        bindLabel="title"
+				        bindValue="_id"
+				        placeholder="בחר"
+				        (change)="onMainIngredientsChange($event)"
+				        [(ngModel)]="selectedMainIngredients">
+					</ng-select>
 				    <small class="form-text text-muted">בחר מצרכים עיקריים הנמצאים במתכון</small>
             	</div>
 				<div class="form-group">
