--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,6 +11,11 @@
 @import 'variables';
 @import 'mixins';
 
+// import ng select css ====================================================================== 
+@import "~@ng-select/ng-select/themes/default.theme.css";
+// ... or 
+// @import "~@ng-select/ng-select/themes/material.theme.css";
+
 // General styling ====================================================================== 
 * {
   margin: 0;
