use 3 dots operator to update the model automatically

--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -233,7 +233,7 @@
 				        bindValue="_id"
 				        placeholder="בחר"
 				        (change)="onMainIngredientsChange($event)"
-				        [(ngModel)]="selectedMainIngredients">
+				        [(ngModel)]="recipe.mainIngredients">
 					</ng-select>
 				    <small class="form-text text-muted">בחר מצרכים עיקריים הנמצאים במתכון</small>
             	</div>
