--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -16,6 +16,18 @@
 // ... or 
 // @import "~@ng-select/ng-select/themes/material.theme.css";
 
+.ng-select.custom .ng-control { padding-right: 10px; }
+
+.ng-select.ng-multiple .ng-control .ng-value-container .ng-value {
+	background-color: #fff5f5;
+    border: 1px solid #ffc2c2;
+}
+
+.ng-select.ng-multiple .ng-control .ng-value-container .ng-value .ng-value-icon.left { border-right: none; }
+.ng-select.ng-multiple .ng-control .ng-value-container .ng-value .ng-value-icon:hover { background-color: #fdd8d8; }
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.marked { background-color: #fdd8d8; }
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.selected { background-color: #fff5f5; }
+
 // General styling ====================================================================== 
 * {
   margin: 0;
