--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -209,9 +209,18 @@
             	<h2>פרטים נוספים</h2>
             	<div class="form-group">
             		<label>קטגוריות</label>
-            		<select multiple="" class="form-control" [(ngModel)]="recipe.categories" name="categories">
-				        <option *ngFor="let category of categories" value="{{ category._id }}">{{ category.name }}</option>
-				    </select>
+				    <ng-select
+				        [items]="categories"
+				        class="custom"
+				        [multiple]="true"
+				        [closeOnSelect]="false"
+				        name="categories"
+				        bindLabel="name"
+				        bindValue="_id"
+				        placeholder="בחר"
+				        notFoundText="לא נמצאו קטגוריות"
+				        [(ngModel)]="recipe.categories">
+					</ng-select>
 				    <small class="form-text text-muted">בחר קטגוריות הקשורות למתכון</small>
 				</div>
 				<div class="form-group">
