--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -66,7 +66,7 @@ input[type=file].inputfile {
 .select { 
 	position: relative;
 
-	select { padding-left: 1.5rem; }
+	select { padding-left: 1.25rem; padding-right: 0.3125rem; }
 	.fa-angle-down {
 		position: absolute;
 		top: 12px;
